--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "uartstdio.h": "c",
         "stdlib.h": "c",
         "iterator": "c",
-        "ctype.h": "c"
+        "ctype.h": "c",
+        "random": "c"
     }
 }
